--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "holiday-gift-list",
+  "scripts": {
+    "start": "serverUrl"
+  },
   "dependencies": {
     "axios": "^1.2.0",
     "ethereum-cryptography": "^1.1.2",
     "express": "^4.18.2"
   }
+
 }
